# nomad-pv-analysis-apps

./: .gitignore  CLAUDE.md  FINALIZE_UNIFICATION_PROMPT.md  HYSPRINT_UNIFICATION_PROMPT.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
apps/AbsPL_Analysis/: abspl_plotter.ipynb  app.py  data_manager.py  gui_components.py  plot_manager.py  pyproject.toml
apps/App_dashboard/: app.py  app_dashboard.ipynb  data_manager.py  gui_components.py  pyproject.toml
apps/DesignOfExperiments/: DoE.ipynb  app.py  app_controller.py  data_manager.py  gui_components.py  manual.html  plot_manager.py  pyproject.toml  sampling_algorithms.py  utils.py
apps/EQE_Analysis/: EQE_Analysis.ipynb  app.py  data_manager.py  gui_components.py  plot_manager.py  pyproject.toml
apps/Electrochemical_analysis/: Automatic_EIScircuit.ipynb  DRT_tools.ipynb  Echem_analysis_jupyter.ipynb  Echem_analysis_jupyter_Learning.ipynb  Echem_analysis_voila.ipynb  Echem_analysis_voila_v1.ipynb  Educational_jupyter.ipynb  Manuel_echem_function.py  Untitled.ipynb  nomad_api_calls.py  pyproject.toml  tutorial-pyDRTtools.ipynb
apps/Electrochemical_analysis/test/: Untitled.ipynb
apps/Entry_Auditor/: app.py  data_manager.py  entry_auditor.ipynb  gui_components.py  pyproject.toml
apps/Excel_creator/: dropdown_options.py  excel_creator.ipynb  experiment_excel_builder.py  pyproject.toml  sheet_data_entry_guide.py  sheet_experiment.py  sheet_how_to_cite.py  voila_experiment_app.py
apps/Excel_creator/templates/: process_templates.json
apps/File_Uploader/: app.py  data_manager.py  file_uploader.ipynb  gui_components.py  pyproject.toml
apps/Global_analyzer/: PERFORMANCE_OPTIMIZATIONS_APPLIED.md  ai_summary.py  app.py  app_secrets.py  config.py  data_loader.py  data_manager.py  global_analyzer.ipynb  global_analyzer_ai.ipynb  gui_components.py  plot_manager.py  pyproject.toml  utils.py
apps/Hansen_green_calculator/: PlottedInks.xlsx  app.py  data_manager.py  gui_components.py  hansen_app.ipynb  plot_manager.py  pyproject.toml  test_plot_manager.py
apps/JV-Analysis/: app.py  data_manager.py  gui_components.py  jv-analysis.ipynb  manual.htm  plot_manager.py  pyproject.toml  resizable_plot_utility.py  utils.py  whats_new.htm
apps/MPPT_Analysis/: MPPT_analyzer.ipynb  app_controller.py  app_state.py  data_manager.py  fitting_tools.py  gui_components.py  plot_manager.py  pyproject.toml  utils.py
apps/NMR_Analysis/: app.py  data_manager.py  gui_components.py  nmr_plotter.ipynb  plot_manager.py  pyproject.toml
apps/Peak_Explorer/: config.py  data_manager.py  exporters.py  fitting_engine.py  gui_components.py  gui_layouts.py  peak_analyzer.ipynb  plot_manager.py  pyproject.toml  utils.py
apps/PeroDatabase_downloader/: README.md  app.py  auth.py  config.py  data_manager.py  fields_catalog.json  gui_components.py  nomad_client.py  nomad_extractor.ipynb  pyproject.toml  schema.py
apps/SEM_crystal_counter/: C5-4_11.tif  SEM_Analyzer.ipynb  SEM_Analyzer_old.ipynb  SEM_bad.ipynb  image_analysis.ipynb  pyproject.toml
apps/TRPL_Analysis/: app.py  data_manager.py  gui_components.py  plot_manager.py  pyproject.toml  trpl_dashboard.ipynb
apps/Wetting_envelope/: app.py  data_manager.py  gui_components.py  plot_manager.py  pyproject.toml  wetting_envelope.ipynb
apps/XPS-Automated/: Max_Huebner_try_11(1).ipynb  pyproject.toml
apps/XRD_peak_finder/: app.py  data_manager.py  gui_components.py  plot_manager.py  pyproject.toml  xy_visualizer.ipynb
apps/bitmap_maker/: app.py  bitmap_generator.ipynb  gui_components.py  pyproject.toml  utils.py
apps/smart_databaser/: alias_config.py  app.py  data_manager.py  gui_components.py  pyproject.toml  smart_databaser.ipynb
apps/smart_databaser/config/: alias_groups.json  field_mappings.json
scripts/: generate_fixtures.py
shared/: __init__.py  pyproject.toml  utils.ipynb
shared/hysprint_utils/: access_token.py  api_calls.py  auth_manager.py  batch_selection.py  config.py  consistency.py  error_handler.py  plotting_utils.py  schemas.py
tests/: conftest.py
tests/AbsPL_Analysis/: conftest.py  test_data_manager.py
tests/AbsPL_Analysis/fixtures/: api_responses.json
tests/App_dashboard/: conftest.py  test_app_dashboard.py
tests/DesignOfExperiments/: conftest.py  test_data_manager.py  test_designofexperiments.py
tests/EQE_Analysis/: conftest.py  test_data_manager.py
tests/EQE_Analysis/fixtures/: api_responses.json
tests/Entry_Auditor/: conftest.py  test_entry_auditor.py
tests/Entry_Auditor/fixtures/: sample_batch.json
tests/Excel_creator/: conftest.py  test_excel_creator.py
tests/File_Uploader/: conftest.py  test_file_uploader.py
tests/Global_analyzer/: conftest.py  test_global_analyzer.py
tests/Hansen_green_calculator/: conftest.py  test_data_manager.py
tests/JV-Analysis/: conftest.py  test_data_manager.py  test_plot_manager.py
tests/JV-Analysis/fixtures/: api_responses.json
tests/MPPT_Analysis/: conftest.py  test_0MPPT_Analysis.py
tests/MPPT_Analysis/fixtures/: api_responses.json
tests/NMR_Analysis/: conftest.py  test_data_manager.py
tests/NMR_Analysis/fixtures/: api_responses.json
tests/PeroDatabase_downloader/: conftest.py  test_perodatabase_downloader.py
tests/TRPL_Analysis/: conftest.py  test_data_manager.py  test_plot_manager.py  test_schema.py
tests/TRPL_Analysis/fixtures/: api_responses.json
tests/Wetting_envelope/: conftest.py  test_wetting_envelope.py
tests/XRD_peak_finder/: conftest.py  test_data_manager.py  test_plot_manager.py  test_schema.py
tests/XRD_peak_finder/fixtures/: api_responses.json
tests/bitmap_maker/: conftest.py  test_bitmap_maker.py
tests/live/: test_api_connectivity.py  test_smart_databaser_field_mapping.py  test_smart_databaser_upload.py
tests/shared/: test_config.py  test_consistency.py
tests/smart_databaser/: conftest.py  test_smart_databaser.py
