[project]
name = "hysprint-utils"
version = "0.1.0"
description = "Shared utilities for HySPRINT analysis apps"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "pandas",
    "plotly",
    # add any other shared deps here
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hysprint_utils"]