[project]
name = "app-dashboard"
version = "0.1.0"
description = "HySPRINT App dashboard app"
requires-python = ">=3.10"
dependencies = [
    "hysprint-utils @ file:///home/jovyan/uploads/analysis_apps_restructuring-WxUahazkSNy-bSE9GaZyZQ/shared",
    "ipython>=8.12",
    "ipywidgets>=8.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
