[project]
name = "designofexperiments"
version = "0.1.0"
description = "HySPRINT DesignOfExperiments app"
requires-python = ">=3.10"
dependencies = [
    "hysprint-utils @ file:///home/jovyan/uploads/analysis_apps_restructuring-WxUahazkSNy-bSE9GaZyZQ/shared",
    "ipython>=8.12",
    "ipywidgets>=8.1",
    "matplotlib>=3.10",
    "notebook>=7.0",
    "numpy>=2.4",
    "openpyxl>=3.1",
    "pandas>=3.0",
    "plotly>=5.24",
    "pyDOE2>=1.3",
    "scikit_learn>=1.8",
    "scipy>=1.17",
    "seaborn>=0.13",
    "voila>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
