[project]
name = "electrochemical-analysis"
version = "0.1.0"
description = "HySPRINT Electrochemical analysis app"
requires-python = ">=3.10"
dependencies = [
    "hysprint-utils @ ../../shared",
    "impedance>=1.7",
    "lmfit>=1.3",
    "matplotlib>=3.10",
    "numpy>=2.4",
    "pandas>=3.0",
    "Requests>=2.34",
    "requests_cache>=1.3",
    "scipy>=1.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
