[project]
name = "entry-auditor"
version = "0.1.0"
description = "Browse NOMAD entries in a batch, find inconsistent field values, and correct all occurrences"
requires-python = ">=3.10"
dependencies = [
    "hysprint-utils @ file:///home/jovyan/uploads/analysis_apps_restructuring-WxUahazkSNy-bSE9GaZyZQ/shared",
    "ipywidgets>=8.0",
    "pandas>=2.0",
    "requests>=2.28",
    "natsort>=8.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
