[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "global-analyzer"
version = "0.1.0"
description = "HySPRINT Global Data Analyzer — interactive batch explorer for NOMAD OASIS data"
requires-python = ">=3.10"
dependencies = [
    # Shared HySPRINT utilities (monorepo sibling package)
    "hysprint-utils @ file:///home/jovyan/uploads/analysis_apps_restructuring-WxUahazkSNy-bSE9GaZyZQ/shared",
    # Data / validation
    "pandas>=2.0",
    "numpy>=1.24",
    "pydantic>=2.0",
    # Visualisation
    "plotly>=5.0",
    "ipywidgets>=8.0",
    "ipython>=8.0",
    # Notebook / Voilà
    "notebook>=7.0",
    "voila>=0.5",
    # Utilities
    "natsort>=8.0",
    "requests>=2.28",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true
