[project]
name = "hansen-app"
version = "0.1.0"
description = "HySPRINT Hansen Solubility Parameter unified app"
requires-python = ">=3.10"
dependencies = [
    "hysprint-utils @ file:///home/jovyan/uploads/analysis_apps_restructuring-WxUahazkSNy-bSE9GaZyZQ/shared",
    "ipywidgets>=8.0",
    "plotly>=5.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "natsort>=8.0",
    "ipympl>=0.9",
    "pydantic>=2.0",
    "scipy>=1.10",
    "openpyxl>=3.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

