[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mppt-analyzer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "plotly",
    "ipywidgets",
    "ipython",
    "notebook",
    "voila",
    "requests",
    "lmfit",
    "scipy",
    "uncertainties",
    "openpyxl",
    "pydantic>=2.0",
    "hysprint-utils @ file:///home/jovyan/uploads/analysis_apps_restructuring-WxUahazkSNy-bSE9GaZyZQ/shared",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true
