[project]
name = "peak-explorer"
version = "0.1.0"
description = "HySPRINT Peak Explorer app"
requires-python = ">=3.10"
dependencies = [
    "hysprint-utils @ file:///home/jovyan/uploads/analysis_apps_restructuring-WxUahazkSNy-bSE9GaZyZQ/shared",
    "h5py>=3.16",
    "ipython>=8.12",
    "ipyvuetify>=1.11",
    "ipywidgets>=8.1",
    "lmfit>=1.3",
    "numpy>=2.4",
    "packaging>=26.2",
    "pandas>=3.0",
    "plotly>=5.24",
    "scipy>=1.17",
    "tqdm>=4.67",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
