[project]
name = "sem-crystal-counter"
version = "0.1.0"
description = "HySPRINT SEM crystal counter app"
requires-python = ">=3.10"
dependencies = [
    "hysprint-utils @ file:///home/jovyan/uploads/analysis_apps_restructuring-WxUahazkSNy-bSE9GaZyZQ/shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
