[project]
name = "xps-automated"
version = "0.1.0"
description = "HySPRINT XPS Automated app"
requires-python = ">=3.10"
dependencies = [
    "hysprint-utils @ file:///home/jovyan/uploads/analysis_apps_restructuring-WxUahazkSNy-bSE9GaZyZQ/shared",
]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
