[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-databaser"
version = "0.1.0"
description = "Live-autofilled NOMAD experiment Excel builder for HySPRINT"
requires-python = ">=3.10"
dependencies = [
    "hysprint-utils @ file:///home/jovyan/uploads/analysis_apps_restructuring-WxUahazkSNy-bSE9GaZyZQ/shared",
    "excel-creator @ file:///home/jovyan/uploads/analysis_apps_restructuring-WxUahazkSNy-bSE9GaZyZQ/apps/Excel_creator",
    "ipython>=8.12",
    "ipywidgets>=8.1",
    "openpyxl>=3.1",
    "pydantic>=2.0",
    "natsort>=8.0",
    "requests>=2.28",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
